Hopefully fix jumpy poll on Safari iOS

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -2283,7 +2283,7 @@ a.card:is(:hover, :focus):visited {
 
     .poll-options.truncated & {
       content-visibility: auto;
-      content-intrinsic-size: auto 1.5lh;
+      content-intrinsic-size: auto 2rem;
     }
 
     &:has(> label) {
